--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <!-- HTML Card Start -->
                 <div class="col-lg-4 pt-4 mt-4 pb-5 pl-lg-5 pr-lg-5">
-                    <img class="img-fluid" src="./image./project1.PNG">
+                    <img class="img-fluid" src="./image./project1.png">
                     <h5 class="mt-4">Bootstrap-Grid System</h5>
                     <p class="text-justify">Bootstrap's grid system uses a series of containers, rows, and columns to layout and align content. It's built with flexbox and is fully responsive. Below is an example and an in-depth look at how the grid comes together.</p>
                 </div>
@@ -147,7 +147,7 @@
 
                 <!-- Bootstrap Card Start -->
                 <div class="col-lg-4 pt-4 mt-4 pb-5 pl-lg-5 pr-lg-5">
-                    <img class="img-fluid" src="./image./project2.PNG">
+                    <img class="img-fluid" src="./image./project2.png">
                     <h5 class="mt-4">Bootstrap-Flex</h5>
                     <p class="text-justify">Quickly manage the layout, alignment, and sizing of grid columns, navigation, components, and more with a full suite of responsive flexbox utilities. For more complex implementations, custom CSS may be necessary.</p>
                 </div>
@@ -155,7 +155,7 @@
 
                 <!-- Nose JS Server Card Start -->
                 <div class="col-lg-4 pt-4 mt-4 pb-5 pl-lg-5 pr-lg-5">
-                    <img class="img-fluid" src="./image./project3.PNG">
+                    <img class="img-fluid" src="./image./project3.png">
                     <h5 class="mt-4">Bootstrap-Compnents</h5>
                     <p class="text-justify">Bootstrap's components are largely built with a base-modifier nomenclature. We group as many shared properties as possible into a base class, like . btn , and then group individual styles for each variant into modifier classes, like . btn-primary or . btn-success ..</p>
                 </div>
