--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
      <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
         <a href="#home">
-        <img id="nav-logo" class="img-fluid" src="./image./nav-logo.png"></a>
+        <img id="nav-logo" class="img-fluid" src="./image/nav-logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
