--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <!-- HTML Card Start -->
                 <div class="col-lg-4 pt-4 mt-4 pb-5 pl-lg-5 pr-lg-5">
-                    <img class="img-fluid" src="./image/bootstrap.png">
+                    <img class="img-fluid" src="./image/chess.png">
                     <h5 class="mt-4">Bootstrap-Grid System</h5>
                     <p class="text-justify">Bootstrap's grid system uses a series of containers, rows, and columns to layout and align content. It's built with flexbox and is fully responsive. Below is an example and an in-depth look at how the grid comes together.</p>
                 </div>
