--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <!-- Bootstrap Card Start -->
                 <div class="col-lg-4 pt-4 mt-4 pb-5 pl-lg-5 pr-lg-5">
-                    <img class="img-fluid" src="./image/art.png.png">
+                    <img class="img-fluid" src="./image/art.png">
                     <h5 class="mt-4">Bootstrap-Flex</h5>
                     <p class="text-justify">Quickly manage the layout, alignment, and sizing of grid columns, navigation, components, and more with a full suite of responsive flexbox utilities. For more complex implementations, custom CSS may be necessary.</p>
                 </div>
